--- a/css/_about.scss
+++ b/css/_about.scss
@@ -4,7 +4,7 @@
   .main__content {
     max-width: 100vw !important;
     & > p {
-      padding-bottom: 8px !important; 
+      padding-bottom: 8px !important;
     }
     &__techniciansList {
       width: 100%;
@@ -64,7 +64,8 @@
         width: 100%;
         max-width: 100%;
         h2 {
-
+          padding-left: 8px;
+          padding-right: 8px;
         }
         p {
           &:first-of-type {
