--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -73,6 +73,34 @@ a {
 }
 
 
+nav#navBar {
+  background-color: $dark;
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  box-sizing: border-box;
+  ul {
+    margin: 0px;
+    padding: 12px 0px;
+    list-style-type: none;
+    a {
+      text-decoration: none;
+      li {
+        list-style: none;
+        display: inline;
+        padding: 12px 15px;
+        color: $light;
+        &:hover {
+          background-color: $dark-red;
+        }
+      }
+    }
+  }
+}
+
 
 section#main-content {
   width: 100%;
@@ -195,22 +223,6 @@ section#main-content {
     .centerText {
       text-align: center;
     }
-    // a {
-    //   text-decoration: none;
-    //   margin-left: auto;
-    //   margin-right: auto;
-    //   animation: revealSlowly 2200ms ease-in-out;
-    //   span {
-    //     font-size: 2.4rem;
-    //     padding: 10px 18px;
-    //     border: 2px solid $dark-red;
-    //     transition: background-color 220ms ease-in-out;
-    //     &:hover {
-    //       background-color: $dark-red;
-    //       color: #FFFFFF;
-    //     }
-    //   }
-    // }
   }
   .second__content {
     box-sizing: border-box;
@@ -284,6 +296,14 @@ section#main-content {
   }
   @media #{$mobile} {
     .main__content {
+      &__techniciansBox {
+        img {
+          width: 50%;
+          max-width: 50%;
+          flex-basis: 50%;
+          margin-bottom: 10px;
+        }
+      }
       .section__box {
         width: auto;
         max-width: 100vw;
