--- a/css/_services.scss
+++ b/css/_services.scss
@@ -80,7 +80,9 @@ section.servicesPage .main__content {
         width: 100%;
         max-width: 100%;
         flex-basis: 100%;
-        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
     }
     .imagesColumn__box {
