--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,6 +4,7 @@ $light: #FFFFFF;
 $light-grey: #d5d5d9;
 $lighter-grey: #fdfdfd;
 $dark-red: #88281D;
+$dark: #424949;
 $off-white: rgb(246, 246, 246);
 
 // Animations ----------------
