--- a/css/master.css
+++ b/css/master.css
@@ -78,6 +78,29 @@ a {
   .half-nav-content:last-of-type {
     animation: slideInFromRightDelayed 1800ms ease-in-out; }
 
+nav#navBar {
+  background-color: #424949;
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  box-sizing: border-box; }
+  nav#navBar ul {
+    margin: 0px;
+    padding: 12px 0px;
+    list-style-type: none; }
+    nav#navBar ul a {
+      text-decoration: none; }
+      nav#navBar ul a li {
+        list-style: none;
+        display: inline;
+        padding: 12px 15px;
+        color: #FFFFFF; }
+        nav#navBar ul a li:hover {
+          background-color: #88281D; }
+
 section#main-content {
   width: 100%;
   max-width: 1200px;
@@ -239,6 +262,11 @@ section#main-content {
           section#main-content .second__content.showing .toggleButton {
             transform: translateY(250%) rotateZ(-180deg); } }
   @media screen and (max-width: 600px) {
+    section#main-content .main__content__techniciansBox img {
+      width: 50%;
+      max-width: 50%;
+      flex-basis: 50%;
+      margin-bottom: 10px; }
     section#main-content .main__content .section__box {
       width: auto;
       max-width: 100vw; }
@@ -421,7 +449,9 @@ section.servicesPage .main__content .imagesColumn {
     width: 100%;
     max-width: 100%;
     flex-basis: 100%;
-    justify-content: center; }
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   section.servicesPage .main__content .imagesColumn__box {
     width: 100%;
     max-width: 100%;
