--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -97,6 +97,57 @@ nav#navBar {
           background-color: $dark-red;
         }
       }
+      &:first-of-type {
+        display: none;
+      }
+    }
+  }
+  @media #{$navbar-break} {
+    ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 0px;
+      a {
+        text-align: center;
+        width: 100%;
+        flex-basis: 100%;
+        max-width: 100%;
+        padding: 6px;
+        li {
+          padding: 2px;
+          &:hover {
+            background-color: transparent;
+          }
+        }
+        &:hover {
+          background-color: $dark-red;
+        }
+        &:first-of-type {
+          display: inline;
+          li {
+            font-size: 1.3rem;
+            padding: 8px 15px;
+            &:hover {
+              background-color: transparent;
+            }
+          }
+        }
+        &:not(:first-of-type) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+.showItems {
+  @media #{$navbar-break} {
+    ul {
+      a:not(:first-of-type) {
+        display: block !important;
+      }
     }
   }
 }
