--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -29,6 +29,8 @@ $off-white: rgb(246, 246, 246);
 // Media Queries -------------
 
 $mobile: "screen and (max-width: 600px)";
+$navbar-break: "screen and (max-width: 700px)";
+$inbetween: "screen and (max-width: 650px)";
 $tablet: "screen and (max-width: 800px)";
 $smallPhone: "screen and (max-width: 330px)";
 
