make directions text font-weight of bold on locations page

--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -109,6 +109,7 @@ nav#navBar {
       flex-wrap: wrap;
       justify-content: center;
       padding: 0px;
+
       a {
         text-align: center;
         width: 100%;
@@ -170,7 +171,7 @@ section#main-content {
     align-items: center;
     max-width: 1000px;
     padding-top: 50px;
-    // animation: revealSlowly 2200ms ease-in-out;
+    animation: revealSlowly 2200ms ease-in-out;
     & > h2, & > h4 {
       margin-top: 0px;
       margin-bottom: 0px;
