--- a/css/_locations.scss
+++ b/css/_locations.scss
@@ -34,6 +34,7 @@
         padding: 8px !important;
         color: $dark-red;
         text-align: center;
+        font-weight: bold;
       }
     }
   }
