--- a/css/_services.scss
+++ b/css/_services.scss
@@ -72,8 +72,17 @@ section.servicesPage .main__content {
         width: 100%;
         max-width: 100%;
         flex-basis: 100%;
-        ul li {
-          text-align: center;
+        ul {
+          padding-left: 0px;
+          li {
+            text-align: center;
+            font-weight: bold;
+            padding-bottom: 2px;
+            padding-top: 2px;
+            &:nth-of-type(2n) {
+              background-color: $inbetween-grey;
+            }
+          }
         }
       }
       &__imageBox {
