add specific car type pages

--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -171,7 +171,7 @@ section#main-content {
     align-items: center;
     max-width: 1000px;
     padding-top: 50px;
-    animation: revealSlowly 2200ms ease-in-out;
+    // animation: revealSlowly 2200ms ease-in-out;
     & > h2, & > h4 {
       margin-top: 0px;
       margin-bottom: 0px;
