--- a/css/master.css
+++ b/css/master.css
@@ -151,8 +151,7 @@ section#main-content {
     flex-direction: column;
     align-items: center;
     max-width: 1000px;
-    padding-top: 50px;
-    animation: revealSlowly 2200ms ease-in-out; }
+    padding-top: 50px; }
     section#main-content .main__content > h2, section#main-content .main__content > h4 {
       margin-top: 0px;
       margin-bottom: 0px; }
@@ -698,5 +697,126 @@ section.servicesPage .main__content .imagesColumn {
     max-width: 100%;
     flex-basis: 100%;
     justify-content: center; } }
+
+#main-content.porschePage .main__content > img {
+  max-width: 500px;
+  min-width: 500px;
+  margin-bottom: 20px; }
+#main-content.porschePage .main__content > h3 {
+  text-align: center; }
+@media screen and (max-width: 600px) {
+  #main-content.porschePage .main__content > img {
+    max-width: 100%;
+    min-width: auto;
+    width: 100%;
+    margin-bottom: 20px; } }
+
+#main-content.vwPage, #main-content.audiPage, #main-content.porschePage {
+  box-sizing: border-box; }
+  #main-content.vwPage .main__content h1, #main-content.audiPage .main__content h1, #main-content.porschePage .main__content h1 {
+    font-size: 2.5rem; }
+  #main-content.vwPage .topBox, #main-content.audiPage .topBox, #main-content.porschePage .topBox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 40px;
+    max-width: 800px; }
+    #main-content.vwPage .topBox p, #main-content.audiPage .topBox p, #main-content.porschePage .topBox p {
+      width: 60%;
+      max-width: 60%;
+      flex-basis: 60%;
+      padding: 4px !important;
+      margin: 0px; }
+    #main-content.vwPage .topBox img, #main-content.audiPage .topBox img, #main-content.porschePage .topBox img {
+      max-width: 40%; }
+  #main-content.vwPage .listAndImage, #main-content.audiPage .listAndImage, #main-content.porschePage .listAndImage {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    max-width: 800px; }
+    #main-content.vwPage .listAndImage__listBox, #main-content.audiPage .listAndImage__listBox, #main-content.porschePage .listAndImage__listBox {
+      width: 40%;
+      max-width: 40%;
+      flex-basis: 40%; }
+      #main-content.vwPage .listAndImage__listBox ul, #main-content.audiPage .listAndImage__listBox ul, #main-content.porschePage .listAndImage__listBox ul {
+        list-style-type: initial !important; }
+        #main-content.vwPage .listAndImage__listBox ul li, #main-content.audiPage .listAndImage__listBox ul li, #main-content.porschePage .listAndImage__listBox ul li {
+          list-style: circle !important;
+          display: block !important; }
+    #main-content.vwPage .listAndImage__imageBox, #main-content.audiPage .listAndImage__imageBox, #main-content.porschePage .listAndImage__imageBox {
+      width: 60%;
+      max-width: 60%;
+      flex-basis: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      #main-content.vwPage .listAndImage__imageBox img, #main-content.audiPage .listAndImage__imageBox img, #main-content.porschePage .listAndImage__imageBox img {
+        max-width: 100%; }
+  #main-content.vwPage .imageAndText, #main-content.audiPage .imageAndText, #main-content.porschePage .imageAndText {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 800px; }
+    #main-content.vwPage .imageAndText__imageBox, #main-content.audiPage .imageAndText__imageBox, #main-content.porschePage .imageAndText__imageBox {
+      width: 50%;
+      max-width: 50%;
+      flex-basis: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+      #main-content.vwPage .imageAndText__imageBox img, #main-content.audiPage .imageAndText__imageBox img, #main-content.porschePage .imageAndText__imageBox img {
+        max-width: 100%; }
+    #main-content.vwPage .imageAndText__textBox, #main-content.audiPage .imageAndText__textBox, #main-content.porschePage .imageAndText__textBox {
+      width: 50%;
+      max-width: 50%;
+      flex-basis: 50%; }
+      #main-content.vwPage .imageAndText__textBox p, #main-content.audiPage .imageAndText__textBox p, #main-content.porschePage .imageAndText__textBox p {
+        padding: 4px !important;
+        margin: none; }
+  @media screen and (max-width: 600px) {
+    #main-content.vwPage .topBox p, #main-content.audiPage .topBox p, #main-content.porschePage .topBox p {
+      width: 100%;
+      max-width: 100%;
+      flex-basis: 100%;
+      order: 2;
+      padding: 40px 10px 0px !important; }
+    #main-content.vwPage .topBox img, #main-content.audiPage .topBox img, #main-content.porschePage .topBox img {
+      order: 1; }
+    #main-content.vwPage .listAndImage__listBox, #main-content.audiPage .listAndImage__listBox, #main-content.porschePage .listAndImage__listBox {
+      width: 100%;
+      max-width: 100%;
+      flex-basis: 100%; }
+      #main-content.vwPage .listAndImage__listBox ul, #main-content.audiPage .listAndImage__listBox ul, #main-content.porschePage .listAndImage__listBox ul {
+        padding-left: 0px; }
+        #main-content.vwPage .listAndImage__listBox ul li, #main-content.audiPage .listAndImage__listBox ul li, #main-content.porschePage .listAndImage__listBox ul li {
+          text-align: center;
+          font-weight: bold;
+          padding-bottom: 2px;
+          padding-top: 2px; }
+          #main-content.vwPage .listAndImage__listBox ul li:nth-of-type(2n), #main-content.audiPage .listAndImage__listBox ul li:nth-of-type(2n), #main-content.porschePage .listAndImage__listBox ul li:nth-of-type(2n) {
+            background-color: #F8F9F9; }
+    #main-content.vwPage .listAndImage__imageBox, #main-content.audiPage .listAndImage__imageBox, #main-content.porschePage .listAndImage__imageBox {
+      width: 100%;
+      max-width: 100%;
+      flex-basis: 100%;
+      padding-top: 20px !important;
+      padding-bottom: 20px !important; }
+    #main-content.vwPage .imageAndText__imageBox, #main-content.audiPage .imageAndText__imageBox, #main-content.porschePage .imageAndText__imageBox {
+      width: 100%;
+      max-width: 100%;
+      flex-basis: 100%;
+      order: 2; }
+    #main-content.vwPage .imageAndText__textBox, #main-content.audiPage .imageAndText__textBox, #main-content.porschePage .imageAndText__textBox {
+      width: 100%;
+      max-width: 100%;
+      flex-basis: 100%;
+      order: 1;
+      padding: 20px 10px !important; } }
 
 /*# sourceMappingURL=master.css.map */
