--- a/css/master.css
+++ b/css/master.css
@@ -698,18 +698,25 @@ section.servicesPage .main__content .imagesColumn {
     flex-basis: 100%;
     justify-content: center; } }
 
-#main-content.porschePage .main__content > img {
-  max-width: 500px;
-  min-width: 500px;
-  margin-bottom: 20px; }
-#main-content.porschePage .main__content > h3 {
-  text-align: center; }
-@media screen and (max-width: 600px) {
+#main-content.porschePage .main__content {
+  padding-left: 40px;
+  padding-right: 40px; }
   #main-content.porschePage .main__content > img {
-    max-width: 100%;
-    min-width: auto;
-    width: 100%;
-    margin-bottom: 20px; } }
+    max-width: 500px;
+    min-width: 500px;
+    margin-bottom: 20px; }
+  #main-content.porschePage .main__content > h3 {
+    text-align: center;
+    max-width: 800px; }
+@media screen and (max-width: 600px) {
+  #main-content.porschePage .main__content {
+    padding-left: 10px;
+    padding-right: 10px; }
+    #main-content.porschePage .main__content > img {
+      max-width: 100%;
+      min-width: auto;
+      width: 100%;
+      margin-bottom: 20px; } }
 
 #main-content.vwPage, #main-content.audiPage, #main-content.porschePage {
   box-sizing: border-box; }
