--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -28,16 +28,37 @@ a {
   }
 }
 
+#contentRounded {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -100px;
+  border-radius: 8px;
+  border: 10px solid lighten($dark, 30);
+  overflow: hidden;
+}
+
+#slideShow {
+  padding-bottom: 0px;
+  max-height: 130px;
+  img {
+    margin-bottom: 0px;
+    max-width: 100%;
+    min-height: 100%;
+    // object-fit: fill;
+  }
+}
 
 #navigation {
   border-bottom: 5px solid $dark-red;
   background: linear-gradient($light-grey, $lighter-grey, $light-grey);
   min-height: 150px;
+  padding-bottom: 100px;
 }
 
 #footer {
-  border-top: 5px solid $dark-red;
-  background: linear-gradient($light-grey, $lighter-grey, $light-grey);
+  // border-top: 5px solid $dark-red;
+  // background: linear-gradient($light-grey, $lighter-grey, $light-grey);
   padding: 10px;
   text-align: center;
   font-size: 14px;
@@ -45,6 +66,9 @@ a {
   flex-direction: column;
   align-items: center;
   min-height: 100px;
+  p:first-of-type {
+    margin-bottom: 0px;
+  }
 }
 
 #nav-content {
@@ -398,6 +422,61 @@ section#main-content {
         margin-top: 5px;
       }
     }
+  }
+}
+
+
+section#subFooter {
+  background-color: $dark-red;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    li {
+      list-style: none;
+      padding-right: 6px;
+      &:not(:first-of-type) {
+        border-left: 1px solid $light;
+        padding-left: 6px;
+
+      }
+      a {
+        color: $light;
+      }
+    }
+    &:first-of-type {
+      padding-left: 10px;
+      max-width: 555px;
+    }
+    &:last-of-type {
+      padding-left: 0px;
+      max-width: 200px;
+    }
+  }
+  @media #{$tablet} {
+    justify-content: center;
+    ul {
+      width: 100%;
+      flex-basis: 100%;
+      justify-content: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      &:first-of-type {
+        padding-bottom: 0px;
+      }
+    }
+  }
+  @media #{$mobile} {
+    font-size: 0.7rem;
   }
 }
 
